--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "bootstrap",
-  "version": "2.3.2",
-  "main": ["./docs/assets/js/bootstrap.js", "./docs/assets/css/bootstrap.css"],
-  "dependencies": {
-    "jquery": ">=1.8.0 <2.1.0"
-  }
+    "name": "bootstrap2.3.2",
+    "version": "2.3.2",
+    "main": ["./dist/js/bootstrap.js", "./dist/css/bootstrap.css"],
+    "dependencies": {
+        "jquery": ">=1.8.0 <2.1.0"
+    }
 }
