--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
     "name": "bootstrap2.3.2",
-    "version": "2.3.2",
-    "main": ["./dist/js/bootstrap.js", "./dist/css/bootstrap.css"],
+    "version": "2.3.21",
+    "main": ["./bootstrap/js/bootstrap.js", "./bootstrap/css/bootstrap.css"],
     "dependencies": {
         "jquery": ">=1.8.0 <2.1.0"
     }
