--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-    "name": "bootstrap2.3.2",
+    "name": "hp-autonomy-bootstrap-2",
     "version": "2.3.2",
     "main": ["./bootstrap/js/bootstrap.js", "./bootstrap/css/bootstrap.css"],
     "dependencies": {
